# AdventOfCode

./: .gitignore
2017/: Day1.hs  Day2bMonad.hs  Day2bRecursion.hs
advent2019/: aoc2019.cabal
aoc2017/: Day1b.hs  Day2.hs  Day3b.hs  Day4.hs  Day4b.hs
aoc2019/: aoc2019.cabal  stack.yaml
aoc2019/src/: Day1.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Helpers.hs  Main.hs
aoc2021/: .editorconfig  Day1.fs  Day10.fs  Day11.fs  Day14.fs  Day2.fs  Day3.fs  Day4.fs  Day5.fs  Day6.fs  Day7.fs  Day8.fs  Day9.fs  Helpers.fs  Program.fs  Types.fs  aoc2021.fsproj  aoc2021.sln
