name:                aoc2019
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/aoc2019#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable aoc2019
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Helpers,
                       Day1
  default-language:    Haskell2010
  default-extensions:	 RankNTypes, 
                       InstanceSigs,  
                       GADTs, 
                       ExplicitForAll, 
                       ScopedTypeVariables 
                       TypeApplications, 
                       DataKinds, 
                       PolyKinds, 
                       TypeOperators,
                       OverloadedStrings,
                       QuasiQuotes,
                       LambdaCase,
                       TemplateHaskell,
                       FlexibleContexts,
                       DerivingVia,
                       StandaloneDeriving,
                       NamedFieldPuns
                       
  build-depends:       base >= 4.7 && < 5,
                       hspec,
                       lens,
                       containers,
                       pretty-simple,
                       text,
                       PyF,
                       containers
